# OpenMP_MPI

./: README.md
MPI/: Parrarel.sln
MPI/Parrarel/: Parrarel.vcxproj  Source.cpp
MPI/Parrarel/x64/Debug/: Parrarel.exe.recipe  vc142.idb
MPI/Parrarel/x64/Debug/Parrarel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Parrarel.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MPI/Parrarel/x64/Release/: Parrarel.exe.recipe
MPI/Parrarel/x64/Release/Parrarel.tlog/: CL.command.1.tlog  CL.write.1.tlog  Parrarel.lastbuildstate  Parrarel.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MPI/x64/Debug/: Parrarel.ilk
MPI/x64/Release/: Parrarel.iobj  Parrarel.ipdb
OpenMP/: CMakeLists.txt  main.c
